<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="#ff0000"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc0000"
        android:minHeight="?attr/actionBarSize"
        android:saveEnabled="false"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/cardo"
        android:text="@string/my_dashboard"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="166dp">

                <TextView
                    android:id="@+id/Exams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_exam"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/Exams"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_exam"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/elearning_learning_online_tablet_education_exam_education_device_256" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/attendace"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/attendance"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/attendace"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/attendance_presence_impendence_identification_verification_256" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/announce12"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/announcements"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/announce12"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/announcement102"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/university"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/courses"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/university"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/university_courses_001_256" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="180dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="166dp">

                <TextView
                    android:id="@+id/Lms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/portal"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/student_portal"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/portal"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/portal" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lms"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#1E1C1C"
                    android:text="@string/cityu_lms"
                    android:textColor="#100B0B"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/lms"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/lms10" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


